--- a/styles/style.css
+++ b/styles/style.css
@@ -159,6 +159,10 @@ a{
     float: right;
 }
 
+/* -----------
+    ---------- newslatter's styles  --------
+    -------------- */
+
 .newslatter{
     width: 80%;
     height: auto;
@@ -183,4 +187,35 @@ input{
     margin-top: 30px;
     box-sizing: border-box;
     padding: 10px;
+}
+
+/* -----------
+    ---------- footer's styles  --------
+    -------------- */
+
+footer{
+    box-sizing: border-box;
+    padding-top: 3%;
+    text-align: center;
+    margin-top: 200px;
+    height: 300px;
+    width: 100%;
+    color: white;
+    background-color: rgb(0, 0, 59);
+}
+footer p{
+    color: lightgray;
+}
+.social-icon{
+    height: 100px;
+    width: 200px;
+    border-radius: 50%;
+    font-size: 20px;
+    background-color: rgb(54, 54, 54);
+    padding: 10px;
+    margin-top: 20px;
+    margin-right: 20px;
+}
+.social-icon a{
+    color: white;
 }
