--- a/styles/style.css
+++ b/styles/style.css
@@ -69,6 +69,7 @@ a{
 
     header{
         height: 100px;
+        width: 100%;
     }
 
     .half-width{
@@ -89,7 +90,6 @@ a{
 
     .top-banner{
         box-sizing: border-box;
-        height: 100vh;
         width: 90%;
         display: flex;
         justify-content: space-between;
@@ -183,7 +183,7 @@ label{
 }
 input{
     height: 30px;
-    width: 60%;
+    width: 40%;
     margin-top: 30px;
     box-sizing: border-box;
     padding: 10px;
@@ -213,9 +213,72 @@ footer p{
     font-size: 20px;
     background-color: rgb(54, 54, 54);
     padding: 10px;
-    margin-top: 20px;
+    margin-top: 50px;
     margin-right: 20px;
 }
 .social-icon a{
     color: white;
 }
+
+
+/* -----------
+    ---------- media query  --------
+    -------------- */
+
+    @media only screen and (max-width: 688px) {
+        h1{
+            font-size: 30px;
+        }
+        h2{
+            font-size: 23px;
+        }
+        h3{
+            font-size: 22px;
+        }
+        .brand-name{
+            width: 100%;
+            text-align: center;
+        }
+        .brand-name h3{
+            font-size: 27px;
+        }
+        main{
+            margin-left: 3%;
+        }
+        .half-width{
+            width: 100%;
+        }
+        .top-banner{
+            box-sizing: border-box;
+            flex-direction: column;
+            width: 100%;
+        }
+        .top-banner .image-section{
+            order: 1;
+        }
+        .top-banner img{
+            padding-left: 30px;
+            height: auto;
+            width: 80%;
+            border-radius: 10px;
+        }
+        .top-banner .info-section{
+            order: 2;
+        }
+        .card-container{
+            display: grid;
+            grid-template-columns: repeat(1,1fr);
+            width: 80%;
+        }
+        form{
+            display: flex;
+            flex-direction: column;
+            width: 100%;
+        }
+        input{
+            width: 60%;
+        }
+        footer{
+            width: 100%;
+        }
+      }
